# Apolli

./: .gitignore  README.md  config.yml  main.py  pyproject.toml
client/: __init__.py  conversions.json  file_converter.py
client/static/css/: style.css
client/static/libs/highlight/: DIGESTS.md  highlight.js
client/templates/: _base.html  _base_nav.html  _doc.html  about.html  index.html
client/templates/errors/: 404.html
client/templates/tools/: _tools.base.html  fileconverter.html
