[project]
name = "web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "dotenv>=0.9.9",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.3",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pydub>=0.25.1",
    "pypandoc>=1.17",
    "pypandoc-binary>=1.17",
    "pyyaml>=6.0.3",
]
